<resources>
    <string name="get_started">"Get Started "</string>
    <string name="welcome_to_ala_kefak">welcome to ala kefak!</string>
    <string name="app_name" translatable="false">Ala Kefak</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_in">sign in</string>
    <string name="required">*Required</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="confirm_pas">Confirm Password</string>
    <string name="account_confirm">Already have an account?<b><i><font color="#FF0000">  <u>SIGN IN</u> </font>  </i></b> </string>
    <string name="create_account">Create Account</string>
    <string name="minNumberOfChars">*Minimum 8 Character Password</string>
    <string name="minNumberOfUpperChars">*Must Contain at least one Upper-case Character</string>
    <string name="minNumberOfLowerChars">*Must Contain at least one Lower-case Character</string>
    <string name="minNumberOfDigits">*Must Contain 1 number</string>
    <string name="minNumberOfSymbols">*Must Contain 1 Special Character(@#$%^+=)</string>
    <string name="invalidEmailAddress">"*Invalid Email Address"</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="spicy_arrabiata_penne" translatable="false">Spicy Arrabiata Penne</string>
    <string name="vegetarian" translatable="false">Vegetarian</string>
    <string name="italian" translatable="false">Italian</string>
    <string name="discover_a_world">Discover a world of culinary delights with our easy-to-use recipe app!</string>
    <string name="nulll" translatable="false">null</string>
    <string name="minNumbersOfLetters"> Username Should Contain at least one letter  </string>
    <string name="this_email_is_used_in_an_already_existing_account">This email is used in an already existing account!</string>
    <string name="this_username_is_already_taken">This username is already taken!</string>
    <string name="this_account_already_exists_do_you_want_to_sign_in">This account already exists! Do you want to sign in?</string>
    <string name="incorrect_email_password_please_try_again">Incorrect email/password, please try again.</string>
    <string name="search_for_a_recipe">Search for a recipe</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="number_of_favourite_meals">Number of favourite meals</string>
    <string name="your_favourite_category">Your favourite category</string>
    <string name="your_favourite_cuisine">Your favourite cuisine</string>
    <string name="search">Search</string>
    <string name="hello_user">Hello</string>
    <string name="check_amazing_recipes">Check out Amazing Recipes!</string>
    <string name="about_us">About Us</string>
    <string name="app_description"><b>Ala Kefak</b> is a recipes application that provides users with a variety of recipes, along with their ingredients and instructions.</string>
    <string name="mission_desc">- Our mission is to make cooking at home easier and more enjoyable by providing users with a wide range of delicious recipes to choose from.</string>
    <string name="vision_desc">- Our vision is to become the go-to source for home cooks looking for inspiration and guidance in the kitchen.</string>
    <string name="values_desc">- Creativity: We are constantly innovating and creating new recipes to keep our users excited about cooking.\n\n- Quality: We strive to provide high-quality recipes that are both delicious and nutritious.\n\n- Accessibility: We believe that everyone should have access to easy-to-follow recipes, regardless of their cooking skills.</string>
    <string name="team_desc">- Our team is made up of passionate foodies, tech enthusiasts, and creative minds who are dedicated to helping users create amazing meals at home.</string>
    <string name="core_values">" Core Values"</string>
    <string name="vision">" Vision"</string>
    <string name="mission">" Mission"</string>
    <string name="team">" Team "</string>
    <string name="zyad_nasser">- Zyad Nasser</string>
    <string name="malak_raef">- Malak Raef</string>
    <string name="mariam_farouk">- Mariam Farouk</string>
    <string name="renad_alalfy">- Renad Alalfy</string>
    <string name="team_members">" Team Members"</string>
    <string name="find_your_recipe">Find your recipe</string>
    <string name="sign_out">Sign Out</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="results">Results</string>
    <string name="empty_text" />
    <string name="favorites">Favorites</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out?</string>
    <string name="signed_out_successfully">Signed out successfully</string>
    <string name="cancel">Cancel</string>
    <string name="remove_favorites_confirmation">Are you sure you want to remove this item from favourites?</string>
    <string name="remove">Remove</string>
    <string name="removed_from_favorites">Removed from favourites</string>
    <string name="categories">Categories</string>
    <string name="foodname">Food Name </string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="Read_more"><u>Read More</u></string>
    <string name="watch_video">Watch Video</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="favorite_icon_description" translatable="false">Favorite Icon Description</string>
    <string name="return_icon_description" translatable="false">Return Icon Description</string>
    <string name="measure">measure</string>
    <string name="ingredient">ingredient</string>
    <string name="food" translatable="false" />
    <string name="meal_name">Meal Name\n</string>
    <string name="youtube" translatable="false" />
    <string name="Youtube">youtube</string>
    <string name="read_less">Read less</string>
    <string name="ala_kefak_logo">Ala Kefak logo</string>
    <string name="search_for_recipes">Search for recipes, categories, or cuisines.</string>
    <string name="empty_fav">Your favorites list is empty. Start exploring recipes and add your favorites here!</string>
    <string name="oops">Oops! We couldn\'t find any matches.</string>
    <string name="check_out_amazing_recipes">Check Out Amazing Recipes!</string>
    <string name="remove_item_from_favorites">Remove item from favourites</string>
    <string name="watch_video2">"Watch Video    "</string>
    <string name="name">Name</string>

</resources>