<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <View
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:background="@drawable/bg_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/favoritIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@color/main_color"
                android:contentDescription="@string/favorite_icon_description"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_heart_outline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@id/container" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerInside"
                android:src="@drawable/placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favoritIcon"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintWidth_percent="0.525"
                app:shapeAppearanceOverlay="@style/CircularShapeAppearance" />

            <TextView
                android:id="@+id/FooodName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/foodname"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic"
               app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="280dp"
                app:layout_constraintVertical_bias="0.1" />


            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/white"
                android:layout_marginTop="80dp"
                android:layout_marginStart="20dp"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/baseline_category_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/area"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/baseline_area_chart_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category"
                 />

            <TextView
                android:id="@+id/ingredientstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ingredients"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/instructiontext"
                app:layout_constraintTop_toBottomOf="@id/container" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="1dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/instructiontext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container"
                tools:listitem="@layout/item_ingredient" />

            <TextView
                android:id="@+id/instructiontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="100dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/instructions"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:text="@string/Read_more"
                android:textColor="@color/md_theme_onPrimaryContainer"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructiontext" />

            <Button
                android:id="@+id/youtubebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/orange"
                android:drawableLeft="@drawable/baseline_ondemand_video_24"
                android:text="@string/watch_video"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instructiontext" />

            <WebView
                android:id="@+id/player_view"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
