<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/searchResultImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/searchRsultName"
            android:layout_width="@dimen/margin_none"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="4dp"
            android:text="@string/spicy_arrabiata_penne"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/searchResultImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/searchResultCategory"
            android:layout_width="@dimen/margin_none"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:drawablePadding="4dp"
            android:text="@string/vegetarian"
            android:textSize="@dimen/text_size_small"
            app:drawableStartCompat="@drawable/category_icon_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/searchResultImageView"
            app:layout_constraintTop_toBottomOf="@id/searchRsultName" />

        <TextView
            android:id="@+id/searchResultArea"
            android:layout_width="@dimen/margin_none"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:drawablePadding="4dp"
            android:text="@string/italian"
            android:textSize="@dimen/text_size_small"
            app:drawableStartCompat="@drawable/location_icon_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/searchResultImageView"
            app:layout_constraintTop_toBottomOf="@id/searchResultCategory" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>