<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.appflow.home.HomeFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <View
                    android:id="@+id/container"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:background="@drawable/bg_search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/hello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/hello_user"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="40dp"
                    android:text="username"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toStartOf="@+id/infoMenu"
                    app:layout_constraintStart_toEndOf="@+id/hello"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginBottom="-40dp"
                    android:text="@string/check_amazing_recipes"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/user"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/infoMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="44dp"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/categories"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/categoriesLottieAnimationView"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/loading_anim" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoriesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/my_col_item"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"
                android:text="@string/popular_recipes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/recipesLottieAnimationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_rawRes="@raw/loading_anim"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingEnd="4dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/recyclerview_item" />
        </LinearLayout>
</layout>
